@@ -1,11 +1,11 @@
-#	$NetBSD: Makefile,v 1.11 2010/05/10 03:37:45 mrg Exp $
+#	$NetBSD: Makefile,v 1.12 2010/09/20 23:11:38 mrg Exp $
 #
-#	$eterna: Makefile,v 1.27 2009/05/22 21:51:38 mrg Exp $
+#	$eterna: Makefile,v 1.30 2010/07/11 00:34:27 mrg Exp $
 #
 # berkeley (netbsd) makefile.  see Makefile.boot for other systems.
 
 # compile-time options are:
-#	DEBUG			/* include debugging support */
+#	NO_DEBUG		/* don't include debugging support */
 #	NO_USER_SUPPORT		/* don't support /~user requests */
 #	NO_CGIBIN_SUPPORT	/* don't support cgi-bin requests */
 #	NO_DIRINDEX_SUPPORT	/* don't support directory indexing */
@@ -13,6 +13,11 @@
 #	NO_DYNAMIC_CONTENT	/* don't support dynamic content updates */
 #	NO_SSL_SUPPORT		/* don't support ssl (https) */
 #	DO_HTPASSWD		/* support .htpasswd files */
+#
+# these are usually set via the "COPTS" variable, or some other method
+# for setting CFLAGS relevant to your make, eg
+#   % make COPTS="-DDO_HTPASSWD"
+
 COPTS+=	-DDO_HTPASSWD
 PROG=	httpd
 MAN=	httpd.8
